--- a/examples/custom_vert_shader_font_rendering/index.html
+++ b/examples/custom_vert_shader_font_rendering/index.html
@@ -13,7 +13,7 @@
       }
     </script>
 
-    <script type="module" src="./custom_shader_font.js" defer></script>
+    <script type="module" src="./custom_vert_shader_font.js" defer></script>
     <script src="../../boilerplate/ortho/ortho.js" defer type="module"></script>
     <script src="../../util/text_sdf/src/Text.js" type="module" defer></script>
     <script src="../../util/text_sdf/webgl/webgl_sdl_generator.js"></script>
