--- a/examples/gooey_text_animation/index.html
+++ b/examples/gooey_text_animation/index.html
@@ -19,21 +19,21 @@
 }
 
 h1 {
-  animation: fade 4s linear infinite;
+  animation: fade 4s linear forwards;
   /* be opacity 1 until 45%, 45%-55% fade out and hold til 90%, come back in for last 10% */
-  animation-timing-function: linear(1 45%, 0 55% 90%, 1 100%);
+  animation-timing-function: linear(1 45%, 0 55% 90%, 0 100%);
   
   &:nth-child(2) {
     /* be opacity 0 until 45%, 45%-55% fade in and hold til 90%, go back out */
-    animation-timing-function: linear(0 45%, 1 55% 90%, 0 100%);
+    animation-timing-function: linear(0 45%, 1 55% 90%, 1 100%);
   } 
 }
 
 section {
   background: white; /* required */
-  animation: combine 4s linear infinite;
+  animation: combine 4s linear forwards;
   /* blur and contrast (up and down) with the intervals the h1s crossfade */
-  animation-timing-function: linear(0, 0 45%, 1 50%, 0 55% 90%, 1 95%, 0 100%);
+  animation-timing-function: linear(0, 0 45%, 1 50%, 0 55% 90%, 0 95%, 0 100%);
   
   padding: 50px;
   display: grid;
@@ -44,17 +44,15 @@ section {
   }
 }
 
-@layer demo {
   :root {
     view-transition-name: none;
   }
   
   h1 {
-    font-size: 13vw;
+    font-size: 100px;
   }
-}
 
-@layer demo.support {
+
   * {
     box-sizing: border-box;
     margin: 0;
@@ -74,28 +72,12 @@ section {
     gap: 1rem;
     padding: 1rem;
   }
-  
-  fieldset {
-    max-inline-size: max-content;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1ch 2ch;
-    border-color: #8885;
-    
-    > label {
-      display: flex;
-      gap: 1ch;
-      align-items: center;
-      white-space: nowrap;
-    }
-  }
-}
 
 </style>
 <body>
 <section>
     <h1>Bologna</h1>
-    <h1>Knives Out</h1>
+    <h1>The Running Man</h1>
 </section>
 </body>
 </html>
